kubernetes/components/pg_tileserv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-tileserv-deployment
  labels:
    app: pg-tileserv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg-tileserv
  template:
    metadata:
      labels:
        app: pg-tileserv
    spec:
      containers:
        - name: pg-tileserv
          image: pg_tileserv
          ports:
            - containerPort: 7800
          volumeMounts:
            - name: config
              mountPath: /etc/pg_tileserv/config.toml
              subPath: config.toml
      volumes:
        - name: config
          configMap:
            name: pg-tileserv-config
