kubernetes/components/pg_tileserv/pg_tileserv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-tileserv-deployment
  labels:
    app: pg-tileserv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg-tileserv
  template:
    metadata:
      labels:
        app: pg-tileserv
    spec:
      containers:
        - name: pg-tileserv
          image: pg_tileserv
          ports:
            - containerPort: 7800
---
apiVersion: v1
kind: Service
metadata:
  name: pg-tileserv-service
spec:
  selector:
    app: pg-tileserv
  ports:
    - protocol: TCP
      port: 7800
      targetPort: 7800
