kubernetes/components/pg_tileserv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-tileserv-service
spec:
  selector:
    app: pg-tileserv
  ports:
    - protocol: TCP
      port: 7800
      targetPort: 7800
  type: ClusterIP
